{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 72,
  "lineage": "55f2e198-c363-7134-530f-bbbefdb91893",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:security-group/sg-08d6967222b750f0a",
            "description": "default VPC security group",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "default-vpc-default-security-group"
                ]
              }
            ],
            "id": "sg-08d6967222b750f0a",
            "name": "default",
            "tags": {
              "Name": "default-vpc-default-security-group"
            },
            "vpc_id": "vpc-07e3b3af9b264e7ad"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:vpc/vpc-07e3b3af9b264e7ad",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f2466704f762452e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-055026cc24778909d",
                "cidr_block": "86.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-2f524347",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07e3b3af9b264e7ad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0be6f9495df92d100",
            "owner_id": "554660509057",
            "tags": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eea504f45ef7a8f7",
            "arn": "arn:aws:ec2:us-east-2:554660509057:instance/i-0b8ed5ea72218bc93",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b8ed5ea72218bc93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "kul_thinknyx",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a6eac2547157bb0b",
            "private_dns": "ip-172-31-29-10.us-east-2.compute.internal",
            "private_ip": "172.31.29.10",
            "public_dns": "ec2-3-145-144-20.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.144.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "kul"
                },
                "throughput": 0,
                "volume_id": "vol-0c8988e98b453feb4",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0667b707728dee814",
            "tags": {
              "Name": "kul"
            },
            "tags_all": {
              "Name": "kul"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08d6967222b750f0a"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "data.aws_ami.ubuntu",
            "data.aws_security_group.default",
            "data.aws_subnets.public_subnets",
            "data.aws_vpc.default",
            "tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "22",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "managed by terraform",
            "from_port": 22,
            "id": "sgrule-1477966652",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08d6967222b750f0a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}